--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "alpha-tribe-dashboard",
+  "name": "alpha",
   "version": "1.0.0",
   "description": "Alpha Tribe Performance Dashboard",
   "main": "src/index.js",
